--- a/digipal/static/css/dpimage.css
+++ b/digipal/static/css/dpimage.css
@@ -45,7 +45,6 @@
 .imageDatabase_label{
     display: block;
     font-weight: bold;
-    color: #7d4644;
 }
 
 /* Thumbnails */
